Latest stable release (v3.1.2). Includes sample-file and bed-file paralleism, plus optimisations.